--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
     <title>React App</title>
   </head>
   <body>
+    <div id"hero">
+      <div id="hero-overlay">
+    
       <div class="container-md">
         
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -38,5 +41,7 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </div>
+</div>
+</div>
   </body>
 </html>
